--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "code-tray",
   "version": "1.0.0",
-  "description": "",
+  "description": "Open VScode projects from tray menu.",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/EngJao89/whatsapp-clone.git"
   },
-  "author": "",
+  "author": "João Ricardo Martins Ribeiro",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/EngJao89/whatsapp-clone/issues"
@@ -22,5 +22,11 @@
   },
   "dependencies": {
     "electron-store": "^8.0.1"
+  },
+  "build": {
+    "appId": "your.id",
+    "mac": {
+      "category": "your.app.category.type"
+    }
   }
 }
